log/build_2022-09-02_22-39-32/pkg_laser/stderr.log
  File "/home/brunofarias/turtlebot3_ws/install/pkg_laser/lib/python3.8/site-packages/pkg_laser/movement.py", line 30
    if(tem_parede_frente && vira_esquerda):
                          ^
SyntaxError: invalid syntax

